# settings-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib-old.rs  lib.rs  paths.rs  settings.rs  types.rs
src/formats/: toml.rs
src/structs/: empty.rs  error.rs  filetype.rs  mod.rs  options.rs  settings.rs  shadowsettings.rs  subsetting.rs  types.rs
src/traits/: format.rs  mod.rs  supportedtype.rs
tests/: testing_with_ron.rs  testing_with_toml.rs
