[package]
name = "settingsfile"
version = "0.2.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

description = "Library for easy interaction with complex configuration / settings files in multiple formats."
repository = "https://github.com/snsvrno/settingsfile-rs"
readme = "README.md"
keywords = ["configuration","settings","config"]
categories = ["config"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"

[dev-dependencies]
ron = "0.4"
toml = "0.4"
tempfile = "3.0"